Fix ENV with ARG